<resources>
    <string name="app_name">AbdulkaremLab3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="abdulkarem_alani_300993768">Abdulkarem Alani 300993768</string>
    <string name="andriod">Andriod</string>
    <string name="textview">TextView</string>
    <string name="clear">Clear</string>
    <string name="red_color">Red Color</string>
    <string name="black_color">Black Color</string>
    <string name="green_color">Green Color</string>
    <string name="small_size">Small size</string>
    <string name="medium_size">Medium Size</string>
    <string name="large_size">Large Size</string>
    <string name="alani">Alani</string>
    <string name="abdulkarem">Abdulkarem</string>
    <string name="button">Button</string>
</resources>